--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 <main id="mainContent" class="mainContent blackScreen" >
     <div id="welcome" class="visible">
         <h2>Welcome to Dashboard Timer</h2>
+        <span>Don't Worry, your Zipcode was for the WEATHER API, OVER... <br/><--- THERE</span>
         <p>Start by adding link you would like to visit during this time</p>
         <p>After you are done, Click on Begin Session to enter a time<br/> 
             you would like to use this session for.</p>
